regra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: regra
  annotations:
    cloud.google.com/backend-config: '{"default": "regra"}'
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: regra
  type: NodePort
