regra/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: regra
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "sgeap-regra-prod"
    networking.gke.io/v1beta1.FrontendConfig: "regra"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: regra
      port:
        number: 8080
